fixes card overflow on mobile

--- a/src/components/Hamburger/style.less
+++ b/src/components/Hamburger/style.less
@@ -14,7 +14,7 @@
     justify-content: center;
     align-items: center;
     height: 100%;
-    border-radius: .1rem .75rem;
+    border-radius: .15rem .75rem;
     // margin: auto;
 
     &:has(.hb-cross) {
